--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,19 +3,19 @@
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cms_v1
     username : root
     password : Cham@wd1
-  security:
-    user:
-      name: root
-      password: Cham@wd1
+#  security:
+#    user:
+#      name: root
+#      password: Cham@wd1
   jpa:
     hibernate:
       ddl-auto : update
       naming :
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL5Dialect
